--- a/src/html/index.html
+++ b/src/html/index.html
@@ -118,7 +118,7 @@
                         <div class="circle2 change1">
                             <div></div>
                         </div>
-                        <h4><span>￥3,799.00</span><a href=""><p>查看详情</p></a></h4>
+                        <h4><span>￥3,799.00</span><a href="details.html"><p>查看详情</p></a></h4>
                     </dd>
                 </dl>
             </section>
